plot: merge data visualization
into the single file
(it was a trivial plot, added it to the former "Results" notebook.)

--- a/scripts/Plot Result - numenta.ipynb
+++ b/scripts/Plot Result - numenta.ipynb
@@ -176,6 +176,43 @@
     "fig = dict(data=traces, layout=layout)\n",
     "iplot(fig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add your data file to plot\n",
+    "data_file = \"../data/realTweets/Twitter_volume_AAPL.csv\"\n",
+    "\n",
+    "# Plot Data (Note if the plot is not visible please close the tab shutdown notebook and restart)\n",
+    "assert os.path.isfile(data_file), \"No such file:\"+str(data_file)\n",
+    "dataframe = pandas.read_csv(data_file)\n",
+    "\n",
+    "assert set(['timestamp','value']).issubset(dataframe.columns), \"Missing columns in file:\"+str(data_file)+\" , cols:\"+str(dataframe.columns)\n",
+    "\n",
+    "x = np.array(dataframe['timestamp'])\n",
+    "y = np.array(dataframe['value'])\n",
+    "\n",
+    "mean = np.mean(y)\n",
+    "\n",
+    "trace = {\"x\": x,\n",
+    "             \"y\": y,\n",
+    "             \"mode\": 'lines',\n",
+    "             \"name\": 'Value'}\n",
+    "trace_mean = {\"x\": x,\n",
+    "                  \"y\": np.ones(len(x))*mean,\n",
+    "                  \"mode\": 'lines',\n",
+    "                  \"name\": 'Mean'}\n",
+    "traces = [trace,trace_mean]\n",
+    "layout = dict(title = \"Data plot : \"+data_file,\n",
+    "                  xaxis = dict(title = 'X'),\n",
+    "                  yaxis = dict(title = 'Value')\n",
+    "                 )\n",
+    "fig = dict(data=traces, layout=layout)\n",
+    "iplot(fig)"
+   ]
   }
  ],
  "metadata": {
