--- a/scripts/Plot.ipynb
+++ b/scripts/Plot.ipynb
@@ -62,22 +62,15 @@
     "assert set(['Threshold','TP','TN','FP','FN','Total_Count']).issubset(summaryDataFrame.columns), \"Missing columns in file \"+str(detector_summary_file)\n",
     "\n",
     "TP,TN,FP,FN= None,None,None,None\n",
-    "if summaryDataFrame[\"Threshold\"][detector_summary_row].size == 1:\n",
-    "        threshold = summaryDataFrame[\"Threshold\"][detector_summary_row]\n",
-    "        TP = summaryDataFrame[\"TP\"][detector_summary_row]\n",
-    "        TN = summaryDataFrame[\"TN\"][detector_summary_row]\n",
-    "        FP = summaryDataFrame[\"FP\"][detector_summary_row]\n",
-    "        FN = summaryDataFrame[\"FN\"][detector_summary_row]\n",
-    "        total_Count = summaryDataFrame[\"Total_Count\"][detector_summary_row]\n",
-    "        standard_score = np.array(summaryDataFrame['Score'][detector_summary_row])\n",
-    "else: #TODO is this branch needed?\n",
-    "        threshold = summaryDataFrame[\"Threshold\"][detector_summary_row][0]\n",
-    "        TP = summaryDataFrame[\"TP\"][detector_summary_row][0]\n",
-    "        TN = summaryDataFrame[\"TN\"][detector_summary_row][0]\n",
-    "        FP = summaryDataFrame[\"FP\"][detector_summary_row][0]\n",
-    "        FN = summaryDataFrame[\"FN\"][detector_summary_row][0]\n",
-    "        total_Count = summaryDataFrame[\"Total_Count\"][detector_summary_row][0]\n",
-    "        standard_score = np.array(summaryDataFrame['Score'][detector_summary_row][0])\n",
+    "assert summaryDataFrame[\"Threshold\"][detector_summary_row].size==1, \n",
+    "  \"There is multiple records in summary file for one datafile!\" \n",
+    "threshold = summaryDataFrame[\"Threshold\"][detector_summary_row]\n",
+    "TP = summaryDataFrame[\"TP\"][detector_summary_row]\n",
+    "TN = summaryDataFrame[\"TN\"][detector_summary_row]\n",
+    "FP = summaryDataFrame[\"FP\"][detector_summary_row]\n",
+    "FN = summaryDataFrame[\"FN\"][detector_summary_row]\n",
+    "total_Count = summaryDataFrame[\"Total_Count\"][detector_summary_row]\n",
+    "standard_score = np.array(summaryDataFrame['Score'][detector_summary_row])\n",
     "        \n",
     "print(\"For result file : \" + result_file)\n",
     "print(\"True Positive (Detected anomalies) : \" + str(TP))\n",
@@ -183,6 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## This is a different file for plotting data \n",
+    "\n",
     "# Add your data file to plot\n",
     "data_file = \"../data/realTweets/Twitter_volume_AAPL.csv\"\n",
     "\n",
