Plot: fix plot of S(t)_standard score
fixed the value that wasn't plotted in recent changes.
But I'm not sure about the meaning/correctness of the data.

--- a/scripts/Plot.ipynb
+++ b/scripts/Plot.ipynb
@@ -62,8 +62,7 @@
     "assert set(['Threshold','TP','TN','FP','FN','Total_Count']).issubset(summaryDataFrame.columns), \"Missing columns in file \"+str(detector_summary_file)\n",
     "\n",
     "TP,TN,FP,FN= None,None,None,None\n",
-    "assert summaryDataFrame[\"Threshold\"][detector_summary_row].size==1, \n",
-    "  \"There is multiple records in summary file for one datafile!\" \n",
+    "assert summaryDataFrame[\"Threshold\"][detector_summary_row].size==1, \"There is multiple records in summary file for one datafile!\" \n",
     "threshold = summaryDataFrame[\"Threshold\"][detector_summary_row]\n",
     "TP = summaryDataFrame[\"TP\"][detector_summary_row]\n",
     "TN = summaryDataFrame[\"TN\"][detector_summary_row]\n",
@@ -99,6 +98,7 @@
     "value = np.array(dataframe['value'])\n",
     "anomaly_score = np.array(dataframe['anomaly_score'])\n",
     "anomaly_label = np.array(dataframe['label'])\n",
+    "standard_score = np.array(dataframe['S(t)_standard'])\n",
     "\n",
     "# Plot values, anomaly score and label scaled to values\n",
     "value_max = np.max(value)\n",
@@ -163,7 +163,7 @@
     "traces = [trace_anomaly_score,trace_threshold,trace_anomaly_label,trace_standard_score]\n",
     "layout = dict(title = \"Anomaly score : \"+result_file,\n",
     "                  xaxis = dict(title = 'X'),\n",
-    "                  yaxis = dict(title = 'Value', range=[-0.1, 1.1]) #range = anomaly score range [0,1] + some padding\n",
+    "                  yaxis = dict(title = 'Value', range=[-0.15, 1.1]) #range = anomaly score range [0,1] + some padding\n",
     "                 )\n",
     "\n",
     "fig = dict(data=traces, layout=layout)\n",
